# dredge-clone

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: water.fs  water.vs  world.fs  world.vs
src/: main.cpp
src/core/: FishingMinigame.cpp  FishingMinigame.h  GameCamera.cpp  GameCamera.h  GameConstants.h  GameRenderer.cpp  GameRenderer.h  Inventory.cpp  Inventory.h  World.cpp  World.h
src/entities/: Boat.cpp  Boat.h  FishingSpot.cpp  FishingSpot.h  Port.cpp  Port.h
